Added store page and changed images

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -22,31 +22,36 @@
     <div class="col-12">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6">
-                <p class="leftContent">Get yourself rewarded for playing games..</p>  
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-6">
-                <p class="rightContent">
-                    Join the <br>
-                    <span>CLUB TODAY</span>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6">
-                <div class="marginRight">
-                    <a href="javascript:void(0);" (click) = "show()" class="signButton">Login / Register</a>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12 col-md-12">
+                    <p class="leftContent">Get yourself rewarded for playing games..</p>  
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div class="marginRight">
+                      <a href="javascript:void(0);" (click) = "show()" class="signButton">Login / Register</a>
+                  </div>
+                  </div>
                 </div>
+                
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6">
-                <div>
-                    <ul class="social-links justify-content-center">
-                        <!-- <li><img class="footerlogo" src='https://product.massbunk.in/massbunk/Logo.png'></li> -->
-                        <li style="margin-left:10%"><a href="#0"><i class="lab la-facebook-f"></i></a></li>
-                        <li><a href="#0"><i class="lab la-twitter"></i></a></li>
-                        <li><a href="#0"><i class="lab la-pinterest-p"></i></a></li>
-                        <li><a href="#0"><i class="lab la-google-plus"></i></a></li>
-                        <li><a href="#0"><i class="lab la-instagram"></i></a></li>
-                    </ul>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12 col-md-12">
+                    <p class="rightContent">
+                        Join the <br>
+                        <span>CLUB TODAY</span>
+                    </p>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div class="marginTop">
+                      <ul class="social-links justify-content-center">
+                          <li style="margin-left:10%"><a href="#0"><i class="lab la-facebook-f"></i></a></li>
+                          <li><a href="#0"><i class="lab la-twitter"></i></a></li>
+                          <li><a href="#0"><i class="lab la-instagram"></i></a></li>
+                          <li><img class="footerlogo" src='assets/images/Logo-Title-White.png'></li>
+                      </ul>
+                  </div>
+                  </div>
                 </div>
             </div>
         </div>
@@ -77,7 +82,8 @@
               </form>
             </div>
             <div class="card alt">
-              <div class="toggle" (click) = "toggle($event)"></div>
+              <div class="toggle" (click) = "toggle($event)">
+              </div>
               <h1 class="title">Register
                 <div class="close" (click) = "switch()"></div>
               </h1>
