--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,26 +3,30 @@
     <div class="header__bottom">
       <div class="container">
         <nav class="navbar navbar-expand-xl align-items-center">
-          <a class="site-logo site-title" href="javascript:void(0);" routerLink="dashboard"><img src="assets/images/logo.png" alt="site-logo"><span class="logo-icon"><i class="flaticon-fire"></i></span></a>
+          <a class="site-logo site-title" href="javascript:void(0);" routerLink="/dashboard"><img src="assets/images/logo.png" alt="site-logo" width="80%"><span class="logo-icon"><i class="flaticon-fire"></i></span></a>
           <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="menu-toggle"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav main-menu ml-auto">
-              <li class="menu">
-                <a href="javascript:void(0);">Home</a>
-              </li>
               <li class="menu_has_children">
                 <a href="javascript:void(0);">Games</a>
                 <ul class="sub-menu">
                   <li><a href="javascript:void(0);">All Games</a></li>
-                  <li><a href="javascript:void(0);">Game Details</a></li>
+                  <li><a href="javascript:void(0);">PC</a></li>
+                  <li><a href="javascript:void(0);">PlayStation</a></li>
+                  <li><a href="javascript:void(0);">Xbox</a></li>
+                  <li><a href="javascript:void(0);">Android</a></li>
+                  <li><a href="javascript:void(0);">iOS</a></li>
                 </ul>
               </li>
               <li class="menu">
-                <a href="javascript:void(0);">About Us</a>
+                <a href="javascript:void(0);" routerLink="/store">Store</a>
               </li>
-              <li><a href="javascript:void(0);">contact</a></li>
+              <li class="menu">
+                <a href="javascript:void(0);">NFT</a>
+              </li>
+              <li><a href="javascript:void(0);">Profile</a></li>
             </ul>
             <div class="nav-right">
               <a href="javascript:void(0);" (click) = "logout()">Logout</a>
