--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -19,10 +19,10 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="hero__content">
-            <span class="hero__sub-title wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.3s">GAME STUDIOS</span>
+            <span class="hero__sub-title wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.3s">KOOKIES</span>
             <h2 class="hero__title wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">The Future Of Gaming</h2>
             <p class=" wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.7s">Our games entertain millions of people every day, everywhere</p>
-            <a href="javascript:void(0)" class="cmn-btn wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">play now</a>
+            <!-- <a href="javascript:void(0)" class="cmn-btn wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">play now</a> -->
           </div>
         </div>
       </div>
@@ -46,7 +46,7 @@
               <div class="game-card__details">
                 <div class="game-card__info">
                   <div class="thumb-wrapper">
-                    <div class="thumb"><img src="assets/images/games/s1.jpg" alt="image"></div>
+                    <div class="thumb"><img src="assets/images/games/Valorant-icon.jpg" alt="image"></div>
                     <div class="game-card__ratings">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -65,12 +65,12 @@
               </div>
             </div><!-- game-card__content end -->
             <div class="game-card__thumb wow zoomIn" data-wow-duration="0.5s" data-wow-delay="0.3s">
-              <img src="assets/images/games/b1.jpg" alt="image">
+              <img src="assets/images/games/Valorant-1.jpg" alt="image">
             </div>
             <div class="game-card__footer wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">
               <div class="left">
-                <div class="thumb"><img src="assets/images/games/m1.jpg" alt="image" class="w-100"></div>
-                <div class="thumb"><img src="assets/images/games/m2.jpg" alt="image" class="w-100"></div>
+                <div class="thumb"><img src="assets/images/games/Valorant-2.jpg" alt="image" class="w-100"></div>
+                <div class="thumb"><img src="assets/images/games/Valorant-3.jpg" alt="image" class="w-100"></div>
               </div>
               <!-- <div class="right">
                 <div class="caption">DOWNLOAD NOW AT</div>
@@ -88,7 +88,7 @@
               <div class="game-card__details">
                 <div class="game-card__info">
                   <div class="thumb-wrapper">
-                    <div class="thumb"><img src="assets/images/games/s2.jpg" alt="image"></div>
+                    <div class="thumb"><img src="assets/images/games/COD-icon.jpg" alt="image"></div>
                     <div class="game-card__ratings">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -107,12 +107,12 @@
               </div>
             </div><!-- game-card__content end -->
             <div class="game-card__thumb wow zoomIn" data-wow-duration="0.5s" data-wow-delay="0.3s">
-              <img src="assets/images/games/b2.jpg" alt="image">
+              <img src="assets/images/games/COD-1.jpg" alt="image">
             </div>
             <div class="game-card__footer wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">
               <div class="left">
-                <div class="thumb"><img src="assets/images/games/m3.jpg" alt="image" class="w-100"></div>
-                <div class="thumb"><img src="assets/images/games/m4.jpg" alt="image" class="w-100"></div>
+                <div class="thumb"><img src="assets/images/games/COD-2.jpg" alt="image" class="w-100"></div>
+                <div class="thumb"><img src="assets/images/games/COD-3.jpg" alt="image" class="w-100"></div>
               </div>
               <!-- <div class="right">
                 <div class="caption">DOWNLOAD NOW AT</div>
@@ -124,6 +124,48 @@
             </div>
           </div><!-- game-card end -->
         </div><!-- single-game end -->
+        <div class="col-lg-12 mb-40 single-game">
+          <div class="game-card style--two">
+            <div class="game-card__content wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.7s">
+              <div class="game-card__details">
+                <div class="game-card__info">
+                  <div class="thumb-wrapper">
+                    <div class="thumb"><img src="assets/images/games/Battlefield-icon.jpg" alt="image"></div>
+                    <div class="game-card__ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>
+                      <span>(4.5)</span>
+                    </div>
+                  </div>
+                  <div class="content">
+                    <h3 class="game-card__title"><a href="javascript:void(0)">BattleField</a></h3>
+                    <p>Fusce sit amet erat sagittis, finibus libero sit amet, aliquet erat. dolor.Duis luctus felis sit amet libero.</p>
+                    <a href="https://battlefieldtracker.com/" class="mt-3">View Stats</a>
+                  </div>
+                </div>
+              </div>
+            </div><!-- game-card__content end -->
+            <div class="game-card__thumb wow zoomIn" data-wow-duration="0.5s" data-wow-delay="0.3s">
+              <img src="assets/images/games/Battlefield-1.jpg" alt="image">
+            </div>
+            <div class="game-card__footer wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">
+              <div class="left">
+                <div class="thumb"><img src="assets/images/games/Battlefield-2.jpg" alt="image" class="w-100"></div>
+                <div class="thumb"><img src="assets/images/games/Battlefield-3.jpg" alt="image" class="w-100"></div>
+              </div>
+              <!-- <div class="right">
+                <div class="caption">DOWNLOAD NOW AT</div>
+                <div class="apps-btn">
+                  <a href="#0"><img src="assets/images/elements/apple-btn.png" alt="image"></a>
+                  <a href="#0"><img src="assets/images/elements/google-btn.png" alt="image"></a>
+                </div>
+              </div> -->
+            </div>
+          </div><!-- game-card end -->
+        </div>
       </div>
     </div>
   </section>
