--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -7,17 +7,19 @@
 }
 .left{
     float: left;
-    padding-left: 5%;
-    padding-top : 10px;
+    padding-left: 3%;
+    padding-top : 3%;
     font-size: 25px;
     font-family: gilroy;
+    color:#ffffff;
 }
 .right{
     float: right;
-    padding-right:5%;
-    padding-top:10px;
+    padding-right:3%;
+    padding-top:3%;
     font-size: 25px;
     font-family: gilroy;
+    color:#ffffff;
 }
 .leftContent{
     padding-left: 10%;
@@ -26,17 +28,25 @@
     padding-right: 10%;
     padding-top: 10%;
     font-family: gilroy;
+    color:#ffffff;
 }
 .rightContent{
     position: absolute;
-    bottom: 5%;
+    /* bottom: 5%; */
     right: 10%;
     font-size:40px;
     line-height: 1;
     font-family: gilroy;
+    color:#ffffff;
+    margin-top:25%;
 }
 .rightContent span{
     font-size: 40px;
+    font-family: gilroy;
+    color:#ffffff;
+}
+.marginTop{
+  margin-top: 50%;
 }
 
 .footerlogo{
@@ -46,7 +56,7 @@
     padding-left:10%;
 }
 .signButton{
-    float: right;
+    float: left;
     background-color: #ffffff;
     border-radius: 999px;
     -webkit-border-radius: 999px;
@@ -58,7 +68,8 @@
     font-size: 18px;
     box-shadow: 0px 10px 9px 0px rgb(26 15 63 / 26%);
     padding: 11px 27px;
-    margin:10px;
+    margin:11%;
+    /* margin-top:10% */
 }
 .signButton:hover{
     background-color: #544590;
@@ -79,6 +90,9 @@
     }
     .waveshape{
         top: 470px !important;
+    }
+    .marginTop{
+      margin-top: 0% !important;
     }
 }
 
