Added NFT store and home page changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <!-- prealoader start  -->
-<div class="preloader">
+<!-- <div class="preloader">
   <div class="spinner">
     <div class="dot1"></div>
     <div class="dot2"></div>
   </div>
-</div>
+</div> -->
 <!-- prealoader end -->
 
 <!-- scroll-to-top start -->
