--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,7 +24,7 @@
                 <a href="javascript:void(0);" routerLink="/store">Store</a>
               </li>
               <li class="menu">
-                <a href="javascript:void(0);">NFT</a>
+                <a href="javascript:void(0);" routerLink="/nft">NFT</a>
               </li>
               <li><a href="javascript:void(0);">Profile</a></li>
             </ul>
