--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -448,9 +448,11 @@
     cursor: pointer;
   }
   .card.alt .toggle:before {
-    content: '\f067';
+    /* content: '\f067'; */
+    content: 'R';
+    font-family: 'Gilroy';
     display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
+    /* font: normal normal normal 14px/1 FontAwesome; */
     font-size: inherit;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
