--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -83,6 +83,7 @@
             </div>
             <div class="card alt">
               <div class="toggle" (click) = "toggle($event)">
+                <!-- <i class="fas fa-star"></i> -->
               </div>
               <h1 class="title">Register
                 <div class="close" (click) = "switch()"></div>
