--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -20,8 +20,8 @@
         <div class="col-lg-8">
           <div class="hero__content">
             <span class="hero__sub-title wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.3s">KOOKIES</span>
-            <h2 class="hero__title wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">The Future Of Gaming</h2>
-            <p class=" wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.7s">Our games entertain millions of people every day, everywhere</p>
+            <h2 class="hero__title wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Monetize your daily gaming</h2>
+            <!-- <p class=" wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.7s">Our games entertain millions of people every day, everywhere</p> -->
             <!-- <a href="javascript:void(0)" class="cmn-btn wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">play now</a> -->
           </div>
         </div>
@@ -35,138 +35,10 @@
         <div class="col-lg-5">
           <div class="section-header text-center has--bg">
             <div class="header-image"><img src="assets/images/elements/header-el.png" alt="image"></div>
-            <h2 class="section-title">Top Games</h2>
+            <h2 class="section-title">Our Benefits</h2>
           </div>
         </div>
       </div><!-- row end -->
-      <div class="row mb-none-40">
-        <div class="col-lg-12 mb-40 single-game">
-          <div class="game-card style--two">
-            <div class="game-card__content wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.7s">
-              <div class="game-card__details">
-                <div class="game-card__info">
-                  <div class="thumb-wrapper">
-                    <div class="thumb"><img src="assets/images/games/Valorant-icon.jpg" alt="image"></div>
-                    <div class="game-card__ratings">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star-half-alt"></i>
-                      <span>(4.5)</span>
-                    </div>
-                  </div>
-                  <div class="content">
-                    <h3 class="game-card__title"><a href="javascript:void(0)">Valorant</a></h3>
-                    <p>Fusce sit amet erat sagittis, finibus libero sit amet, aliquet erat. dolor.Duis luctus felis sit amet libero.</p>
-                    <a href="https://tracker.gg/valorant" class="mt-3">View Stats</a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- game-card__content end -->
-            <div class="game-card__thumb wow zoomIn" data-wow-duration="0.5s" data-wow-delay="0.3s">
-              <img src="assets/images/games/Valorant-1.jpg" alt="image">
-            </div>
-            <div class="game-card__footer wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">
-              <div class="left">
-                <div class="thumb"><img src="assets/images/games/Valorant-2.jpg" alt="image" class="w-100"></div>
-                <div class="thumb"><img src="assets/images/games/Valorant-3.jpg" alt="image" class="w-100"></div>
-              </div>
-              <!-- <div class="right">
-                <div class="caption">DOWNLOAD NOW AT</div>
-                <div class="apps-btn">
-                  <a href="#0"><img src="assets/images/elements/apple-btn.png" alt="image"></a>
-                  <a href="#0"><img src="assets/images/elements/google-btn.png" alt="image"></a>
-                </div>
-              </div> -->
-            </div>
-          </div><!-- game-card end -->
-        </div><!-- single-game end -->
-        <div class="col-lg-12 mb-40 single-game">
-          <div class="game-card style--two">
-            <div class="game-card__content wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.7s">
-              <div class="game-card__details">
-                <div class="game-card__info">
-                  <div class="thumb-wrapper">
-                    <div class="thumb"><img src="assets/images/games/COD-icon.jpg" alt="image"></div>
-                    <div class="game-card__ratings">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star-half-alt"></i>
-                      <span>(4.5)</span>
-                    </div>
-                  </div>
-                  <div class="content">
-                    <h3 class="game-card__title"><a href="javascript:void(0)">Call Of Duty</a></h3>
-                    <p>Fusce sit amet erat sagittis, finibus libero sit amet, aliquet erat. dolor.Duis luctus felis sit amet libero.</p>
-                    <a href="https://cod.tracker.gg/" class="mt-3">View Stats</a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- game-card__content end -->
-            <div class="game-card__thumb wow zoomIn" data-wow-duration="0.5s" data-wow-delay="0.3s">
-              <img src="assets/images/games/COD-1.jpg" alt="image">
-            </div>
-            <div class="game-card__footer wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">
-              <div class="left">
-                <div class="thumb"><img src="assets/images/games/COD-2.jpg" alt="image" class="w-100"></div>
-                <div class="thumb"><img src="assets/images/games/COD-3.jpg" alt="image" class="w-100"></div>
-              </div>
-              <!-- <div class="right">
-                <div class="caption">DOWNLOAD NOW AT</div>
-                <div class="apps-btn">
-                  <a href="#0"><img src="assets/images/elements/apple-btn.png" alt="image"></a>
-                  <a href="#0"><img src="assets/images/elements/google-btn.png" alt="image"></a>
-                </div>
-              </div> -->
-            </div>
-          </div><!-- game-card end -->
-        </div><!-- single-game end -->
-        <div class="col-lg-12 mb-40 single-game">
-          <div class="game-card style--two">
-            <div class="game-card__content wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.7s">
-              <div class="game-card__details">
-                <div class="game-card__info">
-                  <div class="thumb-wrapper">
-                    <div class="thumb"><img src="assets/images/games/Battlefield-icon.jpg" alt="image"></div>
-                    <div class="game-card__ratings">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star-half-alt"></i>
-                      <span>(4.5)</span>
-                    </div>
-                  </div>
-                  <div class="content">
-                    <h3 class="game-card__title"><a href="javascript:void(0)">BattleField</a></h3>
-                    <p>Fusce sit amet erat sagittis, finibus libero sit amet, aliquet erat. dolor.Duis luctus felis sit amet libero.</p>
-                    <a href="https://battlefieldtracker.com/" class="mt-3">View Stats</a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- game-card__content end -->
-            <div class="game-card__thumb wow zoomIn" data-wow-duration="0.5s" data-wow-delay="0.3s">
-              <img src="assets/images/games/Battlefield-1.jpg" alt="image">
-            </div>
-            <div class="game-card__footer wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.9s">
-              <div class="left">
-                <div class="thumb"><img src="assets/images/games/Battlefield-2.jpg" alt="image" class="w-100"></div>
-                <div class="thumb"><img src="assets/images/games/Battlefield-3.jpg" alt="image" class="w-100"></div>
-              </div>
-              <!-- <div class="right">
-                <div class="caption">DOWNLOAD NOW AT</div>
-                <div class="apps-btn">
-                  <a href="#0"><img src="assets/images/elements/apple-btn.png" alt="image"></a>
-                  <a href="#0"><img src="assets/images/elements/google-btn.png" alt="image"></a>
-                </div>
-              </div> -->
-            </div>
-          </div><!-- game-card end -->
-        </div>
-      </div>
     </div>
   </section>
   <!-- about section start -->
@@ -179,9 +51,112 @@
           <div class="about-content">
             <div class="section-header has--bg">
               <div class="header-image style--two"><img src="assets/images/elements/header-el-2.png" alt="image"></div>
-              <h2 class="section-title">We Focus on Quality Entertainment</h2>
+              <h2 class="section-title">We reward you for playing your favourite games</h2>
             </div>
-            <p>Our main focus is to provide the best entertainment possible for our players. We place key emphasis on creating games that are of a high quality in every way possible. This means that we ensure that all our games themes are engaging, our features unique and captivating and our art, stunning and precise! We don’t cut corners and do whatever is necessary to offer a memorable gameplay experience.</p>
+            <p>We reward gamers with ‘Cookies’ for every game they play. ‘Cookies’ is our in-
+              platform currency, using which they can purchase offers on our store from our partnered brands.</p>
+            <a href="javascript:void(0)" class="cmn-btn mt-5">learn more</a>
+          </div>
+        </div>
+        <div class="col-lg-4 mt-lg-0 mt-4">
+          <div class="about-thumb">
+            <img src="assets/images/elements/subscribe.png" alt="image" class="image-1">
+            <img src="assets/images/elements/about-phone.png" alt="image" class="image-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class=" pt-120 pb-120 position-relative overflow-hidden">
+    <div class="about-obj-1" data-paroller-factor="-0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-1.png" alt="image"></div>
+    <div class="about-obj-2" data-paroller-factor="0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-2.png" alt="image"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mt-lg-0 mt-4">
+          <div class="about-thumb">
+            <img src="assets/images/elements/about-player.png" alt="image" class="image-1">
+            <img src="assets/images/elements/about-phone.png" alt="image" class="image-2">
+          </div>
+        </div>
+        <div class="col-lg-8">
+          <div class="about-content">
+            <div class="section-header has--bg">
+              <div class="header-image style--two"><img src="assets/images/elements/header-el-2.png" alt="image"></div>
+              <h2 class="section-title">Compete in Esports</h2>
+            </div>
+            <p>Participate in Kookies monthly esports tournaments and win great prizes.
+              Gamers compete against similar skilled players by playing their own game in a performance
+              base format</p>
+            <a href="javascript:void(0)" class="cmn-btn mt-5">learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class=" pt-120 pb-120 position-relative overflow-hidden">
+    <div class="about-obj-1" data-paroller-factor="-0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-1.png" alt="image"></div>
+    <div class="about-obj-2" data-paroller-factor="0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-2.png" alt="image"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="about-content">
+            <div class="section-header has--bg">
+              <div class="header-image style--two"><img src="assets/images/elements/header-el-2.png" alt="image"></div>
+              <h2 class="section-title">Engage with community</h2>
+            </div>
+            <p>Enlist yourselves as game coaches as per your performance. Form
+              teams with players of similar or higher skill.</p>
+            <a href="javascript:void(0)" class="cmn-btn mt-5">learn more</a>
+          </div>
+        </div>
+        <div class="col-lg-4 mt-lg-0 mt-4">
+          <div class="about-thumb">
+            <img src="assets/images/elements/about-player.png" alt="image" class="image-1">
+            <img src="assets/images/elements/about-phone.png" alt="image" class="image-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class=" pt-120 pb-120 position-relative overflow-hidden">
+    <div class="about-obj-1" data-paroller-factor="-0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-1.png" alt="image"></div>
+    <div class="about-obj-2" data-paroller-factor="0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-2.png" alt="image"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mt-lg-0 mt-4">
+          <div class="about-thumb">
+            <img src="assets/images/elements/about-player.png" alt="image" class="image-1">
+            <img src="assets/images/elements/about-phone.png" alt="image" class="image-2">
+          </div>
+        </div>
+        <div class="col-lg-8">
+          <div class="about-content">
+            <div class="section-header has--bg">
+              <div class="header-image style--two"><img src="assets/images/elements/header-el-2.png" alt="image"></div>
+              <h2 class="section-title">Earn more rewards</h2>
+            </div>
+            <p>Can take part in sponsored & User created tournaments. Earn by completing paid
+              surveys and by bringing more players to our platform.</p>
+            <a href="javascript:void(0)" class="cmn-btn mt-5">learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class=" pt-120 pb-120 position-relative overflow-hidden">
+    <div class="about-obj-1" data-paroller-factor="-0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-1.png" alt="image"></div>
+    <div class="about-obj-2" data-paroller-factor="0.08" data-paroller-type="foreground" data-paroller-direction="horizontal"><img src="assets/images/elements/about-obj-2.png" alt="image"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="about-content">
+            <div class="section-header has--bg">
+              <div class="header-image style--two"><img src="assets/images/elements/header-el-2.png" alt="image"></div>
+              <h2 class="section-title">Support your favourite content creators and noble causes</h2>
+            </div>
+            <p>Support your favourite content creator / influencer / streamer through Kookies recurring
+              revenue sharing program. Donate to your preferred noble causes around the world. Kookies sets aside 10% of the
+              subscription fee for donating to noble causes causes.</p>
             <a href="javascript:void(0)" class="cmn-btn mt-5">learn more</a>
           </div>
         </div>
