--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav main-menu ml-auto">
-              <li class="menu_has_children">
+              <!-- <li class="menu_has_children">
                 <a href="javascript:void(0);">Games</a>
                 <ul class="sub-menu">
                   <li><a href="javascript:void(0);">All Games</a></li>
@@ -19,6 +19,9 @@
                   <li><a href="javascript:void(0);">Android</a></li>
                   <li><a href="javascript:void(0);">iOS</a></li>
                 </ul>
+              </li> -->
+              <li class="menu">
+                <a href="javascript:void(0);" routerLink="/games">Games</a>
               </li>
               <li class="menu">
                 <a href="javascript:void(0);" routerLink="/store">Store</a>
