--- a/src/app/components/nft/nft.component.html
+++ b/src/app/components/nft/nft.component.html
@@ -24,21 +24,23 @@
     </div>
     <div class="row flex-nowrap scroll">
         <div class="col-4 marginBottom">
-            <div class="card bg-light text-dark">
-                <img class="card-img-top" src="https://lh3.googleusercontent.com/sVtiK670NUpwOD6RHHYslYo80OzdE4n8umlHtY0Eh3mEy-n6M4DZHwsMBeKilcWLF4Vs20-fCz2zXN72RMgl7L6iL0_L7LPoVYFHN_o=s349" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title fontColor">Title</h5>
-                    <div class="row">
-                        <div class="col-6">
-                            <p class ="description" style="color: #363636;">Another Way - Medieval, Fantasy, Digital ART</p>
+            <a href="javascript:void(0)" routerLink = "/nftdetails">
+                <div class="card bg-light text-dark">
+                    <img class="card-img-top" src="https://lh3.googleusercontent.com/sVtiK670NUpwOD6RHHYslYo80OzdE4n8umlHtY0Eh3mEy-n6M4DZHwsMBeKilcWLF4Vs20-fCz2zXN72RMgl7L6iL0_L7LPoVYFHN_o=s349" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title fontColor">Title</h5>
+                        <div class="row">
+                            <div class="col-6">
+                                <p class ="description" style="color: #363636;">Another Way - Medieval, Fantasy, Digital ART</p>
+                            </div>
+                            <div class="col-6">
+                                <p class="rightContent fontColor">Ξ0.02</p>
+                            </div>
                         </div>
-                        <div class="col-6">
-                            <p class="rightContent fontColor">Ξ0.02</p>
-                        </div>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                     </div>
-                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                 </div>
-            </div>
+            </a>
         </div>
         <div class="col-4 marginBottom">
             <div class="card bg-light text-dark">
