--- a/src/app/components/games/games.component.html
+++ b/src/app/components/games/games.component.html
@@ -38,18 +38,23 @@
                 <!-- Tab panes -->
                 <div class="tab-content tabs">
                     <div role="tabpanel" class="tab-pane fade in active show" id="games">
-                        <owl-carousel [options]="carouselOptions" [items]="images" [carouselClasses]="['owl-theme', 'row', 'sliding']">
-                            <div class="item" *ngFor="let image of images;let i= index">
+                        <owl-carousel [options]="carouselOptions" [items]="allGames" [carouselClasses]="['owl-theme', 'row', 'sliding']">
+                            <div class="item" *ngFor="let image of allGames;let i= index">
                               <img class="slide-image" src="{{image.image}}" >
                               <div class="slide-text">
-                                <h4>{{image.text}}</h4>
+                                  <a href="{{image.text}}">Register</a>
                               </div>
                             </div>
-                          </owl-carousel>
+                        </owl-carousel>
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="mygames">
-                        <h3>SecKtion 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce semper, magna a ultricies volutpat, mi eros viverra massa, vitae consequat nisi justo in tortor. Proin accumsan felis ac felis dapibus, non iaculis mi varius.</p>
+                        <owl-carousel [options]="carouselOptions" [items]="myGames" [carouselClasses]="['owl-theme', 'row', 'sliding']">
+                            <div class="item" *ngFor="let image of myGames;let i= index">
+                                <a href="javascript:void(0);" (click) = "show(image.url,image.name)">
+                                    <img class="slide-image" src="{{image.image}}" >
+                                </a>
+                            </div>
+                        </owl-carousel>
                     </div>
                 </div>
             </div>
@@ -57,3 +62,23 @@
     </div>
 </div>
 <app-footer></app-footer>
+<div [style.display]="showModal ? 'block' : 'none'" class="modal" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-body">
+        <div class="container">
+            <div class="card">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="mygameTitle">{{gameName}}</p>
+                    </div>
+                    <div class="col-6 button">
+                        <a href="{{gameUrl}}" target="_blank"class="cmn-btn">View Stats</a>
+                    </div>
+                    <div class="col-6 button">
+                        <a href="javascript:void(0);" class="cmn-btn">Tournament</a>
+                    </div>
+                </div>
+                <div class="footer"><a href="javascript:void(0)" (click)="hide()">Close</a></div>
+            </div>
+          </div>
+    </div>
+</div>
