--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="header__bottom">
       <div class="container">
         <nav class="navbar navbar-expand-xl align-items-center">
-          <a class="site-logo site-title" href="javascript:void(0);" routerLink="/dashboard"><img src="assets/images/logo.png" alt="site-logo" width="80%"><span class="logo-icon"><i class="flaticon-fire"></i></span></a>
+          <a class="site-logo site-title" href="javascript:void(0);" routerLink="/dashboard"><img src="assets/images/Logo-Title-White.png" alt="site-logo" width="80%"><span class="logo-icon"><i class="flaticon-fire"></i></span></a>
           <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="menu-toggle"></span>
           </button>
