--- a/src/app/components/store/store.component.html
+++ b/src/app/components/store/store.component.html
@@ -179,7 +179,9 @@
                             <div class="col-xs-12 col-sm-4 col-md-4">
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="https://mediaservice.retailmenot.com/ws/mediagroup/3TWQGP6L5BBWRFIOOHJG4ZCE3A?width=300&height=150">
+                                        <a href="https://www.expedia.co.uk/" target="_blank">
+                                            <img src="https://mediaservice.retailmenot.com/ws/mediagroup/3TWQGP6L5BBWRFIOOHJG4ZCE3A?width=300&height=150">
+                                        </a>
                                     </div>
                                     <div class="col-12" style="padding-left:10%;margin-bottom: 10%;">
                                         <p class="storeHeading">Sale !!!</p>
@@ -187,7 +189,7 @@
                                         <div class="coin">
                                             <img src="assets/images/elements/Coin.png" width="12%">
                                             <span class="storePrice">500</span>
-                                            <a href="https://www.expedia.co.uk/">Sell</a>
+                                            <a href="javascript:void(0);">Sell</a>
                                         </div>
                                     </div>
                                 </div>
@@ -195,7 +197,9 @@
                             <div class="col-xs-12 col-sm-4 col-md-4">
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="https://mediaservice.retailmenot.com/ws/mediagroup/ZKGK6LH3NFGDZPIUB53NJSUBEY?width=300&height=150">
+                                        <a href="https://www.papajohns.com/international/" target="_blank">
+                                            <img src="https://mediaservice.retailmenot.com/ws/mediagroup/ZKGK6LH3NFGDZPIUB53NJSUBEY?width=300&height=150">
+                                        </a>
                                     </div>
                                     <div class="col-12" style="padding-left:10%;margin-bottom: 10%;">
                                         <p class="storeHeading">Sale !!!</p>
@@ -203,7 +207,7 @@
                                         <div class="coin">
                                             <img src="assets/images/elements/Coin.png" width="12%">
                                             <span class="storePrice">450</span>
-                                            <a href="https://www.papajohns.com/international/">Sell</a>
+                                            <a href="javascript:void(0)">Sell</a>
                                         </div>
                                     </div>
                                 </div>
@@ -211,7 +215,9 @@
                             <div class="col-xs-12 col-sm-4 col-md-4">
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="https://mediaservice.retailmenot.com/ws/mediagroup/7D7HU673ZVAGVOUGW7IP5VW5CQ?width=300&height=150">
+                                        <a href="https://www.kohls.com/" target="_blank">
+                                            <img src="https://mediaservice.retailmenot.com/ws/mediagroup/7D7HU673ZVAGVOUGW7IP5VW5CQ?width=300&height=150">
+                                        </a>
                                     </div>
                                     <div class="col-12" style="padding-left:10%;margin-bottom: 10%;">
                                         <p class="storeHeading">Sale !!!</p>
@@ -219,7 +225,7 @@
                                         <div class="coin">
                                             <img src="assets/images/elements/Coin.png" width="12%">
                                             <span class="storePrice">200</span>
-                                            <a href="https://www.kohls.com/">Sell</a>
+                                            <a href="javascript:void(0)">Sell</a>
                                         </div>
                                     </div>
                                 </div>
