--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,7 +29,7 @@
               <li class="menu">
                 <a href="javascript:void(0);" routerLink="/nft">NFT</a>
               </li>
-              <li><a href="javascript:void(0);">Cookies</a></li>
+              <li><a href="javascript:void(0);" routerLink="/cookies">Cookies</a></li>
             </ul>
             <div class="nav-right">
               <a href="javascript:void(0);" (click) = "logout()">Logout</a>
