--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 @import "assets/css/animate.min.css";
 @import "assets/css/lightcase.css";
 @import "assets/css/slick.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';   
 
 /************************ CSS table of content ************************
  *
